Fix for compass contrast against dark areas

--- a/src/main.css
+++ b/src/main.css
@@ -487,10 +487,10 @@ body {
 .dynmap .compass {
 	align-items: center;
 	background-color: transparent;
-	background-image: radial-gradient(#e53935, #e53935 29px, #212121 29px, #212121);
+	background-image: radial-gradient(#e53935, #e53935 29px, #e0e0e0 29px, #e0e0e0 39px, #212121 40px, #212121);
 	border: none;
 	border-radius: 50%;
-	color: #e5e5e5;
+	color: #212121;
 	display: flex;
 	font-size: 72px;
 	height: 72px;
